first implementations of controllers with Gorm
